checker/tests/output/sum-types/ill-typed/bad-sum-types-11.stella
ERROR_UNEXPECTED_INJECTION
